--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-torch==1.7.1+cu110
-torchvision==0.8.2+cu110
-torchaudio===0.7.2
-pytorch-ignite==0.3.0
-transformers==4.2.2
-tokenizers==0.9.4
+torch
+torchvision
+torchaudio
+pytorch-ignite
+transformers
+tokenizers
